한유림 : 커밋 연습

--- a/HomeWork/HomeWork_220114_ToUpper/HomeWork_220114_ToUpper.vcxproj
+++ b/HomeWork/HomeWork_220114_ToUpper/HomeWork_220114_ToUpper.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a68d42bc-f73c-40ea-ae82-87778b931245}</ProjectGuid>
-    <RootNamespace>HomeWork</RootNamespace>
+    <ProjectGuid>{14b8215a-cbc0-44c9-9162-12c9780c3b81}</ProjectGuid>
+    <RootNamespace>HomeWork220114ToUpper</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>HomeWork_220114_ToUpper</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="HomeWork.cpp" />
+    <ClCompile Include="HomeWork_220114_ToUpper.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
